--- a/Server/package.json
+++ b/Server/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "mongodb": "^3.6.4",
     "mongoose": "^5.11.19",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7"
   }
 }
